--- a/css/responsive.css
+++ b/css/responsive.css
@@ -93,6 +93,7 @@
 	text-align: center;
 	vertical-align: middle;
 	margin-bottom: 10px;
+	max-width: 100%;
 }
 
 .main-container .footer .social .buttons {
