--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,53 @@
 /* ==========================================================================
    BASE STYLES
    ========================================================================== */
+@font-face {
+   font-family: 'Proxima Nova';
+   src: url('../fonts/proxima_nova_alt_bold-webfont.eot');
+   src: url('../fonts/proxima_nova_alt_bold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/proxima_nova_alt_bold-webfont.woff2') format('woff2'),
+        url('../fonts/proxima_nova_alt_bold-webfont.woff') format('woff'),
+        url('../fonts/proxima_nova_alt_bold-webfont.ttf') format('truetype'),
+        url('../fonts/proxima_nova_alt_bold-webfont.svg#proxima_nova_alt_rgbold') format('svg');
+   font-weight: bold;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Proxima Nova';
+   src: url('../fonts/proxima_nova_alt_light-webfont.eot');
+   src: url('../fonts/proxima_nova_alt_light-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/proxima_nova_alt_light-webfont.woff2') format('woff2'),
+        url('../fonts/proxima_nova_alt_light-webfont.woff') format('woff'),
+        url('../fonts/proxima_nova_alt_light-webfont.ttf') format('truetype'),
+        url('../fonts/proxima_nova_alt_light-webfont.svg#proxima_nova_altlight') format('svg');
+   font-weight: 300;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Proxima Nova';
+   src: url('../fonts/proxima_nova_alt_regular-webfont.eot');
+   src: url('../fonts/proxima_nova_alt_regular-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/proxima_nova_alt_regular-webfont.woff2') format('woff2'),
+        url('../fonts/proxima_nova_alt_regular-webfont.woff') format('woff'),
+        url('../fonts/proxima_nova_alt_regular-webfont.ttf') format('truetype'),
+        url('../fonts/proxima_nova_alt_regular-webfont.svg#proxima_nova_alt_rgregular') format('svg');
+   font-weight: normal;
+   font-style: normal;
+}
+
+@font-face {
+   font-family: 'Proxima Nova';
+   src: url('../fonts/proxima_nova_alt_thin-webfont.eot');
+   src: url('../fonts/proxima_nova_alt_thin-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/proxima_nova_alt_thin-webfont.woff2') format('woff2'),
+        url('../fonts/proxima_nova_alt_thin-webfont.woff') format('woff'),
+        url('../fonts/proxima_nova_alt_thin-webfont.ttf') format('truetype'),
+        url('../fonts/proxima_nova_alt_thin-webfont.svg#proxima_nova_altthin') format('svg');
+   font-weight: 100;
+   font-style: normal;
+}
 
 @font-face {
   font-family: 'fontello';
@@ -12,6 +59,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+body {
+    font-family: 'Proxima Nova', 'Helvetica Neue', sans-serif;
+}
+
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
@@ -22,42 +74,42 @@
   }
 }
 */
- 
+
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
+
 .icon-facebook-circled:before { content: '\e800'; } /* '' */
 .icon-twitter-circled:before { content: '\e801'; } /* '' */
 .icon-linkedin-circled:before { content: '\e802'; } /* '' */
@@ -86,6 +138,7 @@ body>.navbar a {
 	border-bottom: 4px solid #fff;
 	color: #929aa5;
 	text-transform: uppercase;
+    font-weight: bold;
 }
 
 body>.navbar a:hover, body>.navbar a.active {
@@ -133,10 +186,11 @@ header.cover .content {
 
 header.cover .content h1 {
 	margin: 0 0 40px;
+    font-weight: bold;
 }
 
 header.cover .content p {
-	font-size: 130%;
+	font-size: 150%;
 }
 
 /* ==========================================================================
@@ -150,6 +204,10 @@ header.cover .content p {
 
 .our-history .row {
 	padding-top: 80px
+}
+
+.our-history .content h3 {
+    font-weight: bold;
 }
 
 .our-history .content h3, .our-history .content p {
@@ -176,6 +234,7 @@ header.cover .content p {
 .mission-vision-values header h3 {
 	color: #454545;
 	margin-bottom: 30px;
+    font-weight: bold;
 }
 
 .mission-vision-values .items > div {
@@ -191,6 +250,7 @@ header.cover .content p {
 	color: #254daa;
 	text-transform: uppercase;
 	font-weight: bold;
+    font-size: 120%;
 }
 
 .mission-vision-values .items p {
@@ -221,8 +281,12 @@ header.cover .content p {
 	margin-bottom: 30px;
 }
 
-.research-quality .content h3, 
-.research-quality .content p, 
+.research-quality .content h3 {
+    font-weight: bold;
+}
+
+.research-quality .content h3,
+.research-quality .content p,
 .research-quality .content ul {
 	margin-bottom: 30px;
 }
@@ -278,6 +342,10 @@ header.cover .content p {
 	color: #fff;
 }
 
+.quality-control .content h3 {
+    font-weight: bold;
+}
+
 .quality-control .content h3, .quality-control .content p {
 	margin-bottom: 30px;
 }
@@ -303,6 +371,7 @@ header.cover .content p {
 
 .contact h3 {
 	margin-bottom: 15px;
+    font-weight: bold;
 }
 
 .contact .separator {
